--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "dependencies": {
     "expo": "^18.0.3",
+    "express": "^4.15.3",
+    "install": "^0.10.1",
+    "npm": "^5.3.0",
+    "passport-spotify": "^0.3.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1"
   }
