--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "AwesomeProject",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "react-native-scripts": "0.0.50",
-    "jest-expo": "~18.0.0",
-    "react-test-renderer": "16.0.0-alpha.12"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "mobile jukebox app",
+  "main": "index.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon node_modules/nodemon/bin/nodemon.js -- node_modules/babel-cli/bin/babel-node.js server.js"
   },
-  "jest": {
-    "preset": "jest-expo"
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "expo": "^18.0.3",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1"
+    "babel-loader": "^7.1.1",
+    "cookie-session": "^2.0.0-beta.2",
+    "express": "^4.15.3",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
+    "webpack": "^3.3.0"
   }
 }
