--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "0.0.50",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "jest-expo": "~18.0.0",
+    "react-native-scripts": "0.0.50",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
+    "server": "nodemon server.js --exec babel-node --presets es2015,stage-2",
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
@@ -23,6 +27,7 @@
     "express": "^4.15.3",
     "install": "^0.10.1",
     "npm": "^5.3.0",
+    "passport": "^0.3.2",
     "passport-spotify": "^0.3.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1"
