--- a/package.json
+++ b/package.json
@@ -3,25 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "jest-expo": "~18.0.0",
-<<<<<<< HEAD
     "react-native-scripts": "0.0.50",
-    "react-test-renderer": "16.0.0-alpha.12"
-=======
+    "jest-expo": "~18.0.0",
     "react-test-renderer": "16.0.0-alpha.12",
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "nodemon": "^1.11.0"
->>>>>>> oauth
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "server": "nodemon server.js --exec babel-node --presets es2015,stage-2",
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
@@ -33,25 +25,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-loader": "^7.1.1",
+    "cookie-session": "^2.0.0-beta.2",
     "expo": "^18.0.3",
-<<<<<<< HEAD
-    "express": "^4.15.3",
-    "install": "^0.10.1",
-    "npm": "^5.3.0",
-    "passport": "^0.3.2",
-    "passport-spotify": "^0.3.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1"
-=======
-    "react": "^16.0.0-alpha.12",
-    "react-native": "^0.45.1",
     "express": "^4.15.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
-    "webpack": "^3.3.0",
-    "babel-loader": "^7.1.1",
-    "cookie-session": "^2.0.0-beta.2"
->>>>>>> oauth
+    "passport-spotify": "^0.3.1",
+    "react": "^16.0.0-alpha.12",
+    "react-native": "^0.45.1",
+    "webpack": "^3.3.0"
   }
 }
